# aegize

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: README.md
.github/workflows/: ci.yml  publish.yml
docs/: anti-goals.md  architecture.md  brand.md  decisions.md  launch-checklist.md  launch-kit.md  launch-video.md  next-steps.md  principles.md  questions.md  release.md  roadmap.md  vision.md
examples/: aegize.yaml  agentguard.yaml  approval_email.py  basic_allow.py  decorator_usage.py  demo_policy.yaml  demo_story.py  denied_shell.py  policy_tests.yaml
rfcs/: 0001-agent-identity.md  0002-policy-engine.md  0003-audit-format.md  0004-approval-workflow.md  0005-runtime-governance.md  0006-resource-scoped-permissions.md  0007-mutating-action-safety.md  0008-policy-as-code-lifecycle.md  README.md
scripts/: aegize_term.py  context_check.py  generate_capability_montage.py  generate_demo_gif.py  generate_end_card.py  generate_social_preview.py
src/aegize/: __init__.py  cli.py  decorators.py  exceptions.py  guarded_tool.py
src/agentguard/: __init__.py  _time.py  action.py  audit.py  context.py  decorators.py  exceptions.py  identity.py  policy.py
tests/: conftest.py  test_cli.py  test_decorators.py  test_guarded_tool.py  test_policy.py  test_primitives.py
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/playground/: page.tsx
web/src/app/sandbox/: page.tsx
web/src/components/: Architecture.tsx  Button.tsx  CodeExample.tsx  CopyButton.tsx  DemoSection.tsx  Features.tsx  Footer.tsx  Hero.tsx  HeroPipeline.tsx  Logo.tsx  Nav.tsx  OpenSource.tsx  Reveal.tsx  RuntimePipeline.tsx  RuntimeSection.tsx  SandboxPage.tsx  Section.tsx  TryTheRuntime.tsx  Why.tsx  icons.tsx
web/src/components/sandbox/: AuditLog.tsx  DecisionBadge.tsx  PipelineStage.tsx  RuntimeSandbox.tsx  ToolButton.tsx
web/src/lib/: links.ts  sandbox.ts
