[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentguard"
version = "0.2.0"
description = "A policy, permission, approval, and audit layer for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Geoffrey", email = "ggaswint@gmail.com" }]
keywords = ["ai", "agents", "llm", "policy", "security", "audit", "permissions", "guardrails"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/gggaswint/agentguard"
Repository = "https://github.com/gggaswint/agentguard"
Issues = "https://github.com/gggaswint/agentguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentguard"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
