[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegize"
version = "0.3.0"
description = "Infrastructure for autonomous AI agents: identity, policy, permissions, approval workflows, and audit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Geoffrey Gaswint", email = "ggaswint@gmail.com" }]
keywords = [
  "ai",
  "agents",
  "llm",
  "infrastructure",
  "governance",
  "identity",
  "policy",
  "permissions",
  "approval",
  "audit",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Topic :: Security",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
aegize = "aegize.cli:main"

[project.urls]
Homepage = "https://aegize.com"
Repository = "https://github.com/gggaswint/aegize"
Documentation = "https://github.com/gggaswint/aegize#readme"
Issues = "https://github.com/gggaswint/aegize/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aegize"]

# Keep the source distribution lean — only the package, tests, examples, and metadata.
[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
